Sign Up API added!

--- a/front-end/login.html
+++ b/front-end/login.html
@@ -10,14 +10,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
 
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="./js/API/sign_in.js"></script>
         <script type="text/javascript">
-        $(document).ready(function(){
-            $('#loginButton').on('click', function(){
-                //check if values are correct in db
-                //   #inputEmail #inputPassword
-                alert('Im trying to Log-In');
-            })
-        });
+        
         </script>
     </head>
     <body class="bg-primary">
