--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -8,6 +8,10 @@
         <title>Static Navigation - SB Admin</title>
         <link href="../css/styles.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
+
+
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="../js/sell_book.js"></script>
     </head>
     <body>
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -48,11 +52,58 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid px-4">
-
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="btn btn-danger closeModal" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="myModalLabel">Vendita</h4>
+                        </div>
+                        <div class="modal-body margin-down">
+                          <h5>Inserisca il prodotto da vendere</h5>
+                          <div class="form-group margin-down">
+                            <label for="input_titolo">Titolo</label>
+                            <input type="text" class="form-control" id="input_titolo" placeholder="Titolo">
+                          </div>
+                          <div class="form-group margin-down">
+                            <label for="input_autore">Autore</label>
+                            <input type="text" class="form-control" id="input_autore" placeholder="Autore">
+                          </div>
+                          <div class="form-group margin-down">
+                            <label for="input_genere">Genere</label>
+                            <input type="text" class="form-control" id="input_genere" placeholder="Genere">
+                          </div>
+                          <div class="form-group margin-down">
+                            <label for="input_ISBN">ISBN</label>
+                            <input type="text" class="form-control" id="input_ISBN" placeholder="ISBN">
+                          </div>
+                          <div class="form-group margin-down">
+                            <label for="input_price">Price</label>
+                            <input type="number" class="form-control" id="input_price" placeholder="Prezzo di vendita">
+                          </div>
+                          <div class="alert alert-danger" style="margin-top: 30px;" role="alert" id="alert_uncomplete">
+                            Attenzione, compilare tutti i campi!
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default closeModal" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-primary" id="buttonActionSell">Sell Now</button>
+                        </div>
+                      </div>
                     </div>
-                </main>
+                </div>
+                <!--end modal-->
+                <div style="margin-top: 10px; margin-left: auto; margin-right: auto; margin-bottom: 20px;">
+                        <div class="btn btn-primary" style="width: 100px; height: 50px;" id="buttonSell">
+                            Vendi
+                        </div>
+                </div>
+
+                <!--Storico-->
+                
+                <!-- End Storico-->
+
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
