Show all of books that is selling and delete it

--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -43,7 +43,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                                 Buy
                             </a>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                            <a class="nav-link collapsed active" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Sell
                             </a>
@@ -100,9 +100,24 @@
                         </div>
                 </div>
 
-                <!--Storico-->
-                
-                <!-- End Storico-->
+                <!--Libri Attualmente in Vendita-->
+                <div id="libriVendita">
+                    <div class="row">
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <h7 class="card-subtitle mb-2 text-muted">Author - Genere</h7>
+                                    <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+                                    <h8 class="card-subtitle mb-2 text-muted"></h8>
+                                    <p class="card-text">Des quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a class="btn btn-warning buttonBuy" id="buttonDelete">Elimina</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Libri Vendita-->
 
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
