--- a/front-end/user/history.html
+++ b/front-end/user/history.html
@@ -5,8 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Static Navigation - SB Admin</title>
+        <title>MyMarketplace - History</title>
         <link href="../css/styles.css" rel="stylesheet" />
+        <style>
+            .margin_value{
+                margin: 20px;
+            }
+            .sell_card{
+                background-color: rgb(255, 137, 163);
+            }
+            .buy_card{
+                background-color: rgb(138, 192, 138);
+            }
+        </style>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -35,9 +46,9 @@
                                 Dashboard
                             </a>
                             <div class="sb-sidenav-menu-heading">Manage</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <a class="nav-link collapsed active" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                                Buy
+                                History
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
@@ -48,11 +59,39 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main>
-                    <div class="container-fluid px-4">
-
+                <div class="row">
+                    <div class="col-xl-3 col-md-6 mb-4 margin_value">
+                        <div class="card sell_card">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h7 class="card-subtitle mb-2 text-muted">Author - Genere</h7>
+                                <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+                                <h8 class="card-subtitle mb-2 text-muted"></h8>
+                            </div>
+                        </div>
                     </div>
-                </main>
+                    <div class="col-xl-3 col-md-6 mb-4 margin_value">
+                        <div class="card buy_card">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h7 class="card-subtitle mb-2 text-muted">Author - Genere</h7>
+                                <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+                                <h8 class="card-subtitle mb-2 text-muted"></h8>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-md-6 mb-4 margin_value">
+                        <div class="card sell_card">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h7 class="card-subtitle mb-2 text-muted">Author - Genere</h7>
+                                <h6 class="card-subtitle mb-2 text-muted">Price</h6>
+                                <h8 class="card-subtitle mb-2 text-muted"></h8>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
