--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -11,7 +11,9 @@
 
 
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script src="../js/sell_book.js"></script>
+        <script src="../js/sell_book_modal.js"></script>
+        <script src="../js/API/delete_book.js"></script>
+        <script src="../js/API/sell_book.js"></script>
     </head>
     <body>
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
