Logout request ADDED

--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -13,6 +13,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script src="../js/sell_book_modal.js"></script>
         <script src="../js/API/delete_book.js"></script>
+        <script src="../js/API/logout.js"></script>
         <script src="../js/API/sell_book.js"></script>
     </head>
     <body>
@@ -26,7 +27,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                        <li><a class="dropdown-item" id="inputLogout">Logout</a></li>
                     </ul>
                 </li>
             </ul>
