isLogged request ADDED

--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -11,6 +11,8 @@
 
 
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
+        <script src="../js/API/is_logged.js"></script>
         <script src="../js/sell_book_modal.js"></script>
         <script src="../js/API/delete_book.js"></script>
         <script src="../js/API/logout.js"></script>
