--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -19,7 +19,7 @@
         <script src="../js/API/sell_book.js"></script>
     </head>
     <body>
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <nav class="sb-topnav navbar navbar-expand nisLogged request ADDEDavbar-dark bg-dark">
             <!-- Navbar Brand-->
             <a class="navbar-brand ps-3" href="index.html">MyMarketplace</a>
             <!-- Sidebar Toggle-->
