add buy book request

--- a/front-end/user/index.html
+++ b/front-end/user/index.html
@@ -82,7 +82,7 @@
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default closeModal" data-dismiss="modal">Close</button>
-                          <button type="button" class="btn btn-primary">Buy Now</button>
+                          <button type="button" class="btn btn-primary" id="buyButton" >Buy Now</button>
                         </div>
                       </div>
                     </div>
