Show book that's selling now

--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -17,6 +17,7 @@
         <script src="../js/API/delete_book.js"></script>
         <script src="../js/API/logout.js"></script>
         <script src="../js/API/sell_book.js"></script>
+        <script src="../js/API/search_book_selling.js"></script>
     </head>
     <body>
         <nav class="sb-topnav navbar navbar-expand nisLogged request ADDEDavbar-dark bg-dark">
@@ -107,20 +108,7 @@
 
                 <!--Libri Attualmente in Vendita-->
                 <div id="libriVendita">
-                    <div class="row">
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <h7 class="card-subtitle mb-2 text-muted">Author - Genere</h7>
-                                    <h6 class="card-subtitle mb-2 text-muted">Price</h6>
-                                    <h8 class="card-subtitle mb-2 text-muted"></h8>
-                                    <p class="card-text">Des quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a class="btn btn-warning buttonBuy" id="buttonDelete">Elimina</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
                 <!-- End Libri Vendita-->
 
