--- a/front-end/user/history.html
+++ b/front-end/user/history.html
@@ -13,7 +13,8 @@
 
         <style>
             .margin_value{
-                margin: 20px;
+                margin-top: 10px;
+                margin-left: 10px;
             }
             .sell_card{
                 background-color: rgb(255, 137, 163);
@@ -64,11 +65,11 @@
             </div>
             <!--books append value-->
             <div id="layoutSidenav_content">
-                <h5>Libri Comprati</h5>
+                <h5 class="margin_value">Libri Comprati</h5>
                 <div id="books_search">
 
                 </div>
-                <h5>Libri Venduti</h5>
+                <h5 class="margin_value">Libri Venduti</h5>
                 <div id="books_sell">
 
                 </div>
