Add DELETE request, but return error

--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -13,9 +13,9 @@
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
         <script src="../js/API/is_logged.js"></script>
-        <script src="../js/sell_book_modal.js"></script>
         <script src="../js/API/delete_book.js"></script>
         <script src="../js/API/logout.js"></script>
+        <script src="../js/sell_book_modal.js"></script>
         <script src="../js/API/sell_book.js"></script>
         <script src="../js/API/search_book_selling.js"></script>
     </head>
@@ -105,7 +105,7 @@
                             Vendi
                         </div>
                 </div>
-
+                <h5  style="margin-bottom:10px;">Libri attualmente in vendita</h5>
                 <!--Libri Attualmente in Vendita-->
                 <div id="libriVendita">
 
