--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -8,7 +8,12 @@
         <title>Static Navigation - SB Admin</title>
         <link href="../css/styles.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
-
+        <style>
+          .card_color{
+            background-color: rgb(141, 194, 138);
+            border-radius: 10px;
+          }
+        </style>
 
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
@@ -20,7 +25,7 @@
         <script src="../js/API/search_book_selling.js"></script>
     </head>
     <body>
-        <nav class="sb-topnav navbar navbar-expand nisLogged request ADDEDavbar-dark bg-dark">
+        <nav class="sb-topnav navbar navbar-expand nisLogged request navbar-dark bg-dark">
             <!-- Navbar Brand-->
             <a class="navbar-brand ps-3" href="index.html">MyMarketplace</a>
             <!-- Sidebar Toggle-->
