--- a/front-end/user/history.html
+++ b/front-end/user/history.html
@@ -13,9 +13,11 @@
 
         <style>
             .sell_card{
+                border-radius: 10px;
                 background-color: rgb(255, 137, 163);
             }
             .buy_card{
+                border-radius: 10px;
                 background-color: rgb(138, 192, 138);
             }
         </style>
