--- a/front-end/user/index.html
+++ b/front-end/user/index.html
@@ -36,7 +36,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!" id="inputLogout">Logout</a></li>
+                        <li><a class="dropdown-item" id="inputLogout">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -51,11 +51,11 @@
                                 Dashboard
                             </a>
                             <div class="sb-sidenav-menu-heading">Manage</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <a class="nav-link" href="history.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                                Buy
+                                Show history
                             </a>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                            <a class="nav-link" href="sell.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Sell
                             </a>
