--- a/front-end/user/sell.html
+++ b/front-end/user/sell.html
@@ -23,10 +23,6 @@
         <script src="../js/sell_book_modal.js"></script>
         <script src="../js/API/sell_book.js"></script>
         <script src="../js/API/search_book_selling.js"></script>
-        
-        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script src="../js/API/logout.js"></script>
-        <script src="../js/API/is_logged.js"></script>
     </head>
     <body>
         <nav class="sb-topnav navbar navbar-expand nisLogged request navbar-dark bg-dark">
@@ -54,11 +50,11 @@
                                 Dashboard
                             </a>
                             <div class="sb-sidenav-menu-heading">Manage</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <a class="nav-link" href="history.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                                Buy
+                                Show history
                             </a>
-                            <a class="nav-link collapsed active" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                            <a class="nav-link active" href="sell.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Sell
                             </a>
